# rest_client/openapi.yaml
@@ -30,6 +30,66 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /seal/:
+    get:
+      tags:
+      - seal
+      summary: seal stamp disp
+      description: 'return seal dispray:
+
+
+        - **username**(str):
+
+        - **password**(str):
+
+        - **sex**(int): [男性:0,女性:1,その他2]
+
+        - **age**(int):'
+      operationId: sealStampDisp
+      parameters:
+      - name: place_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Place Id
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            text/html:
+              schema:
+                type: string
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+    post:
+      tags:
+      - seal
+      summary: seal stamp post
+      description: Creates a new Post
+      operationId: sealStampPost
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StampSealForm'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   schemas:
     HTTPValidationError:
@@ -41,6 +101,22 @@ components:
           title: Detail
       type: object
       title: HTTPValidationError
+    StampSealForm:
+      properties:
+        lineToken:
+          type: string
+          title: Linetoken
+          description: liff用のToken
+        place_id:
+          type: integer
+          title: Place Id
+          description: スタンプを押した場所
+      type: object
+      required:
+      - lineToken
+      - place_id
+      title: StampSealForm
+      description: スタンプの押印処理時に受け取るpostのform的なもの
     ValidationError:
       properties:
         loc:
@@ -65,3 +141,5 @@ components:
 tags:
 - name: user
   description: ユーザーに関するAPI
+- name: seal
+  description: スタンプを押す用のAPIとか
